[gd_scene load_steps=12 format=3 uid="uid://dtjal1ff4gyfe"]

[ext_resource type="Script" path="res://notes/note.gd" id="1_k3vvd"]
[ext_resource type="PackedScene" uid="uid://6xa2kl78865d" path="res://notes/note_checkpoint.tscn" id="2_nfqg4"]
[ext_resource type="Script" path="res://notes/note_events/appear_event.gd" id="3_m0n3l"]
[ext_resource type="PackedScene" uid="uid://diyjao2akicpk" path="res://notes/note_events/move_event.tscn" id="4_bex8r"]
[ext_resource type="Script" path="res://notes/note_events/end_event.gd" id="5_2uktm"]
[ext_resource type="Script" path="res://notes/note_body.gd" id="6_vy0we"]
[ext_resource type="Script" path="res://notes/mouse_follower.gd" id="8_fxr6v"]
[ext_resource type="Script" path="res://notes/drag_detector.gd" id="9_n88os"]
[ext_resource type="Texture2D" uid="uid://coptmqrodx8ky" path="res://assets/note_lines.png" id="10_mww66"]
[ext_resource type="Texture2D" uid="uid://dmrn2xun6ea65" path="res://assets/note_lid.png" id="13_xlp1m"]

[sub_resource type="Curve2D" id="Curve2D_46q8g"]
resource_local_to_scene = true
bake_interval = 1.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 540, 0, 0, 30, 10, 0, 0)
}
point_count = 2

[node name="Note" type="Node" node_paths=PackedStringArray("note_body", "checkpoints_container", "note_events_container", "end_checkpoint", "appear_event", "end_event")]
script = ExtResource("1_k3vvd")
start_time = 0.5
note_size = 60.0
note_body = NodePath("NoteBody")
checkpoints_container = NodePath("Checkpoints")
note_events_container = NodePath("NoteEvents")
end_checkpoint = NodePath("Checkpoints/EndCheckpoint")
appear_event = NodePath("NoteEvents/AppearEvent")
end_event = NodePath("NoteEvents/EndEvent")

[node name="Checkpoints" type="Node" parent="."]

[node name="StartCheckpoint" parent="Checkpoints" instance=ExtResource("2_nfqg4")]
checkpoint_name = "Start"
is_essential = true
play_position = Vector2(0, 540)

[node name="EndCheckpoint" parent="Checkpoints" instance=ExtResource("2_nfqg4")]
target_time = 3.0
checkpoint_name = "End"
is_essential = true

[node name="NoteEvents" type="Node" parent="."]

[node name="AppearEvent" type="Node" parent="NoteEvents" node_paths=PackedStringArray("start_checkpoint")]
script = ExtResource("3_m0n3l")
start_checkpoint = NodePath("../../Checkpoints/StartCheckpoint")
event_name = "Appear Event"

[node name="MoveEvent" parent="NoteEvents" node_paths=PackedStringArray("start_checkpoint", "destination_checkpoint") instance=ExtResource("4_bex8r")]
path = SubResource("Curve2D_46q8g")
start_checkpoint = NodePath("../../Checkpoints/StartCheckpoint")
destination_checkpoint = NodePath("../../Checkpoints/EndCheckpoint")

[node name="EndEvent" type="Node" parent="NoteEvents" node_paths=PackedStringArray("end_checkpoint")]
script = ExtResource("5_2uktm")
end_checkpoint = NodePath("../../Checkpoints/EndCheckpoint")
event_name = "End Event"
event_type = 2

[node name="NoteBody" type="Node2D" parent="." node_paths=PackedStringArray("mouse_follower", "note", "drag_detector", "body")]
script = ExtResource("6_vy0we")
mouse_follower = NodePath("MouseFollower")
note = NodePath("..")
drag_detector = NodePath("DragDetector")
body = NodePath("Hitbox")

[node name="MouseFollower" type="Node2D" parent="NoteBody"]
script = ExtResource("8_fxr6v")

[node name="DragDetector" type="Control" parent="NoteBody"]
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("9_n88os")

[node name="Hitbox" type="Control" parent="NoteBody"]
custom_minimum_size = Vector2(94, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -41.0
offset_top = -41.0
offset_right = 123.0
offset_bottom = 123.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="NoteBody/Hitbox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 42.0
offset_top = -27.0
offset_right = -48.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("10_mww66")
expand_mode = 1
stretch_mode = 1

[node name="RightLid" type="TextureRect" parent="NoteBody/Hitbox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 53.0
offset_bottom = 27.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("13_xlp1m")

[node name="LeftLid" type="TextureRect" parent="NoteBody/Hitbox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -27.0
offset_right = 55.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(-1, 1)
mouse_filter = 2
texture = ExtResource("13_xlp1m")
